--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="pimg1">
         <div class="ptext">
             <span class="border">
-                Coding Ninjas
+                Thank You
             </span>
         </div>
     </div>
